--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Aza Book Reviews
-description: Review for books I like
+description: Reviews for books I like
 remote_theme: pages-themes/architect@v0.2.0
