--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 title: Aza Book Reviews
 description: Reviews for books I like
-remote_theme: pages-themes/architect@v0.2.0
-show_downloads: true
+remote_theme: remote_theme: jekyll/minima
+plugins:
+  - jekyll-remote-theme
+
